--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^4.3.0",
+    "@nuxtjs/proxy": "^1.1.2",
     "element-ui": "^1.4.5",
     "nuxt": "^1.0.0-rc11"
   },
