--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "jslint": "^0.11.0"
+    "jslint": "^0.11.0",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6"
   }
 }
