--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "pigutu-ui",
   "version": "1.0.0",
-  "description": "Nuxt.js project",
-  "author": "IceMimosa <chk@terminus.io>",
+  "description": "pigutu-ui project",
+  "author": "IceMimosa <chk19940609@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "node bin/server.js",
     "build": "nuxt build",
-    "start": "nuxt start",
+    "start": "cross-env NODE_ENV=production node server.js",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
@@ -15,11 +15,14 @@
   "dependencies": {
     "@nuxtjs/axios": "^4.3.0",
     "@nuxtjs/proxy": "^1.1.2",
+    "compass-mixins": "^0.12.10",
     "element-ui": "^1.4.5",
-    "nuxt": "^1.0.0-rc11"
+    "nuxt": "^1.0.0-rc11",
+    "vue-style-loader": "^3.0.3"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
+    "cross-env": "^5.0.5",
     "eslint": "^4.3.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.9.0",
