--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "axios": "^0.16.2",
+    "@nuxtjs/axios": "^4.5.0",
+    "@nuxtjs/proxy": "^1.1.2",
     "compass-mixins": "^0.12.10",
     "element-ui": "^1.4.5",
     "nuxt": "^1.0.0-rc11",
