--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "compass-mixins": "^0.12.10",
     "element-ui": "^1.4.12",
     "node-sass": "^4.7.2",
-    "nuxt": "^1.0.0-rc11",
-    "vue-infinite-scroll": "^2.0.2",
+    "nuxt": "^1.4.0",
+    "vue-lazyload": "^1.2.1",
     "vue-style-loader": "^3.0.3"
   },
   "devDependencies": {
