--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "private": true,
   "scripts": {
     "dev": "node bin/server.js",
-    "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production BASE_URL=www.pigutu.com node bin/server.js",
+    "build": "cross-env BASE_URL=www.pigutu.com nuxt build",
+    "start": "cross-env NODE_ENV=production node bin/server.js",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
