--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/proxy": "^1.1.2",
     "compass-mixins": "^0.12.10",
     "element-ui": "^1.4.12",
+    "moment": "^2.22.1",
     "node-sass": "^4.7.2",
     "nuxt": "^1.4.0",
     "vue-lazyload": "^1.2.1",
