--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "node bin/server.js",
-    "build": "cross-env BASE_URL=http://www.pigutu.com nuxt build",
+    "build": "cross-env BASE_URL=https://www.pigutu.com nuxt build",
     "start": "cross-env NODE_ENV=production node bin/server.js",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
